# federated-learning

./: .gitignore  CONSIGNES.md  RAPPORT_TECHNIQUE.md  README.md  SLIDES.md  pyproject.toml
src/: dataset.py  main.py  models.py  simulation.py
src/fairness/: algorithm.py  client.py  evaluator.py  metrics.py
