[project]
name = "federated-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fluke-fl",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "plotnine>=0.15.1",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "torch>=2.9.1",
]

[tool.uv.workspace]
members = [
    "fluke",
]

[tool.uv.sources]
fluke-fl = { workspace = true, editable = true }
